Update some api specifications

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "fumadocs-core": "14.7.4",
     "fumadocs-mdx": "11.3.1",
     "fumadocs-openapi": "^5.11.5",
+    "fumadocs-twoslash": "^2.0.2",
     "fumadocs-ui": "14.7.4",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "shiki": "^1.27.2"
+    "shiki": "^1.27.2",
+    "twoslash": "^0.2.12"
   },
   "devDependencies": {
     "@types/node": "22.10.6",
